feat: updated swagger and event type endpoint
