# backend/docs/swagger.yaml
@@ -63,6 +63,8 @@ definitions:
     properties:
       accepted_at:
         type: string
+      approved_vendor:
+        $ref: '#/definitions/model.Vendor'
       company:
         $ref: '#/definitions/model.Company'
       created_at:
@@ -118,12 +120,20 @@ definitions:
     properties:
       created_at:
         type: string
+      events:
+        items:
+          $ref: '#/definitions/model.Event'
+        type: array
       id:
         type: string
       name:
         type: string
       updated_at:
         type: string
+      vendors:
+        items:
+          $ref: '#/definitions/model.Vendor'
+        type: array
     type: object
   model.ResponseStatus:
     enum:
@@ -243,6 +253,33 @@ paths:
       - BearerAuth: []
       tags:
       - authentication
+  /event/types:
+    get:
+      consumes:
+      - application/json
+      description: Find all event types
+      parameters:
+      - description: Vendor ID
+        in: query
+        name: vendor_id
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.EventType'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
+      security:
+      - BearerAuth: []
+      tags:
+      - event
   /events:
     get:
       consumes:
@@ -387,28 +424,6 @@ paths:
       summary: Find all vendors by event
       tags:
       - vendor
-  /events/types:
-    get:
-      consumes:
-      - application/json
-      description: Find all event types
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/model.EventType'
-            type: array
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/utils.ErrorResponse'
-      security:
-      - BearerAuth: []
-      tags:
-      - event
 securityDefinitions:
   BearerAuth:
     in: header
