# backend/internal/infrastructure/repository/event_type_repository.go
@@ -26,6 +26,19 @@ func (r *eventTypeRepository) FindAll() ([]*model.EventType, error) {
 	return events, nil
 }
 
+func (r *eventTypeRepository) FindAllByVendorID(vendorID string) ([]*model.EventType, error) {
+	var events []*model.EventType
+
+	if err := r.db.
+		Joins("JOIN vendor_event_types ON vendor_event_types.event_type_id = event_types.id").
+		Joins("JOIN vendors ON vendors.id = vendor_event_types.vendor_id").
+		Where("vendors.secure_id = ?", vendorID).Find(&events).Error; err != nil {
+		return nil, err
+	}
+
+	return events, nil
+}
+
 func (r *eventTypeRepository) FindBySecureID(secureID string) (*model.EventType, error) {
 	var event model.EventType
 
